--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first website</title>
+    <title>SquareEyes</title>
+    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
-  </body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="producers.html">Producers</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Stream high quality independent films</h1>
+    </main>
+    <footer>
+
+    </footer>
 </html>
