--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+  
   <body>
     <header>
       <nav>
@@ -15,9 +16,28 @@
         </ul>
       </nav>
     </header>
+   
     <main>
       <h1>Stream high quality independent films</h1>
+      
+      <section>
+        <h2>Film-lover?</h2>
+        <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
+        <button type="button">Explore our films</button>
+      </section>
+
+      <section>
+        <h2>Pay-per-watch</h2>
+        <p>No monthly charges. Only 2$ per film.</p>
+      </section>
+
+      <section>
+        <h2>Are you a producer?</h2>
+        <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
+        <button type="button">Create a account</button>
+      </section>
     </main>
+   
     <footer>
 
     </footer>
