--- a/producers.html
+++ b/producers.html
@@ -5,6 +5,7 @@
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
   <body>
     <header>
       <nav>
@@ -15,14 +16,39 @@
         </ul>
       </nav>
     </header>
+
     <main>
         <section>
             <h1>Producers</h1>
             <p>Explore independent producers and watch their high quality films</p>
             <p>Are you are producer yourself?</p><a href="create-account.html">Join us now!</a>
-            
+          </section>
+
+          <section>
+            <h2>Name Surename</h2>
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <button type="button">Profile</button>
+          </section>
+
+          <section>
+            <h2>Name Surename</h2>
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <button type="button">Profile</button>
+          </section>
+
+          <section>
+            <h2>Name Surename</h2>
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <button type="button">Profile</button>
+          </section>
+
+          <section>
+            <h2>Name Surename</h2>
+            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <button type="button">Profile</button>
           </section>
     </main>
+
     <footer>
 
     </footer>
