--- a/producers.html
+++ b/producers.html
@@ -20,32 +20,32 @@
     <main>
         <section>
             <h1>Producers</h1>
-            <p>Explore independent producers and watch their high quality films</p>
-            <p>Are you are producer yourself?</p><a href="create-account.html">Join us now!</a>
+               <p>Explore independent producers and watch their high quality films</p>
+                <p>Are you are producer yourself?</p><a href="create-account.html">Join us now!</a>
+          </section>
+
+          <section>
+            <h2>Name Surename</h2>
+             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+                <a href="producer-profile.html">Profile</a>
           </section>
 
           <section>
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
-            <button type="button">Profile</button>
+            <a href="producer-profile.html">Profile</a>
           </section>
 
           <section>
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
-            <button type="button">Profile</button>
+            <a href="producer-profile.html">Profile</a>
           </section>
 
           <section>
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
-            <button type="button">Profile</button>
-          </section>
-
-          <section>
-            <h2>Name Surename</h2>
-            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
-            <button type="button">Profile</button>
+            <a href="producer-profile.html">Profile</a>
           </section>
     </main>
 
