--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       
       <section>
         <h2>Film-lover?</h2>
-        <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
-        <button type="button">Explore our films</button>
+         <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
+           <a href="films.html">Explore our films</a>
       </section>
 
       <section>
@@ -33,8 +33,8 @@
 
       <section>
         <h2>Are you a producer?</h2>
-        <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
-        <button type="button">Create a account</button>
+         <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
+          <a href="create-account.html">Create an account</a>
       </section>
     </main>
    
