--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
   <body>
     <header>
+      <img src="images/logo.png" alt="SquarEyes - connecting film-lovers">
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -18,6 +19,7 @@
     </header>
    
     <main>
+      <img src="images/watchingfilm.jpg" alt="People watching film">
       <h1>Stream high quality independent films</h1>
       
       <section>
