--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <body>
     <header>
-      <img src="images/logo.png" alt="SquarEyes - connecting film-lovers">
+      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers"></a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -19,7 +19,6 @@
     </header>
    
     <main>
-      <img src="images/watchingfilm.jpg" alt="People watching film">
       <h1>Stream high quality independent films</h1>
       
       <section>
