--- a/producers.html
+++ b/producers.html
@@ -8,6 +8,7 @@
 
   <body>
     <header>
+      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers"></a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
