--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers"></a>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="films.html">Films</a></li>
           <li><a href="producers.html">Producers</a></li>
         </ul>
