updated html and css

--- a/producers.html
+++ b/producers.html
@@ -4,6 +4,7 @@
     <title>SquareEyes | Producers</title>
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -13,7 +14,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="films.html">Films</a></li>
-          <li><a href="producers.html">Producers</a></li>
+          <li><a href="producers.html" class="active">Producers</a></li>
         </ul>
       </nav>
     </header>
