--- a/index.html
+++ b/index.html
@@ -20,20 +20,22 @@
     </header>
    
     <main>
-      <h1>Stream high quality independent films</h1>
+     <section class="indexh1"> 
+       <h1>Stream high quality independent films</h1> 
+     </section>
       
-      <section>
+      <section class="indexh2">
         <h2>Film-lover?</h2>
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
            <a href="films.html">Explore our films</a>
       </section>
 
-      <section>
+      <section class=indexh3>
         <h2>Pay-per-watch</h2>
         <p>No monthly charges. Only 2$ per film.</p>
       </section>
 
-      <section>
+      <section class="indexh4">
         <h2>Are you a producer?</h2>
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
           <a href="create-account.html">Create an account</a>
