--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
       
       <section class="indexh2">
         <h2>Film-lover?</h2>
+      </section>
+      <section class="indexp1">
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
            <a href="films.html">Explore our films</a>
       </section>
 
       <section class=indexh3>
         <h2>Pay-per-watch</h2>
+      </section>
+      <section class="indexp2">
         <p>No monthly charges. Only 2$ per film.</p>
       </section>
 
       <section class="indexh4">
         <h2>Are you a producer?</h2>
+      </section>
+      <section class="indexp3">
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
           <a href="create-account.html">Create an account</a>
       </section>
