--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <p>No monthly charges. Only 2$ per film.</p>
       </section>
 
-      <section class="indexh4">
+      <div class="indexh4">
         <h2>Are you a producer?</h2>
-      </section>
+      </div>
       <section class="indexp3">
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
           <a href="create-account.html">Create an account</a>
