--- a/films.html
+++ b/films.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>SquareEyes | Independent Films</title>
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
