--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <body>
     <header>
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers"></a>
+      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
       <nav>
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
