--- a/producer-profile.html
+++ b/producer-profile.html
@@ -11,7 +11,7 @@
   
   <body>
     <header>
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers"></a>
+      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
