--- a/films.html
+++ b/films.html
@@ -29,31 +29,31 @@
      
       <section>
           <h2>New Releases</h2>
-          <img src="images/film1-big.jpg" alt="Film Title by Producer-name">
+          <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name"></a>
       </section>
 
       <h2>Drama</h2>
       <section class="drama">        
-        <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name"></a>
-        <a href="watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name"></a>
-        <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name"></a>
-        <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name"></a>
+        <a href="watch1.html"><img src="images/film1.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="watch1.html"><img src="images/film2.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
       </section>
 
       <h2>Dokumentary</h2>
       <section class="documentary">        
-        <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name"></a>
-        <a href="watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name"></a>
-        <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name"></a>
-        <a href="watch1.html"><img src="images/film8.jpg" alt="Film Title by Producer-name"></a>
+        <a href="watch1.html"><img src="images/film5.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="watch1.html"><img src="images/film6.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
+        <a href="watch1.html"><img src="images/film8.jpg" alt="Film Title by Producer-name" class="film"></a>
       </section>
          
       <h2>Action</h2>
       <section class="action">   
-          <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name"></a>
-          <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name"></a>
-          <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name"></a>
-          <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name"></a>
+          <a href="watch1.html"><img src="images/film9.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html"><img src="images/film4.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html"><img src="images/film7.jpg" alt="Film Title by Producer-name" class="film"></a>
+          <a href="watch1.html"><img src="images/film3.jpg" alt="Film Title by Producer-name" class="film"></a>
       </section>
     </main>
 
