--- a/films.html
+++ b/films.html
@@ -29,7 +29,7 @@
      
       <section>
           <h2>New Releases</h2>
-          <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name"></a>
+          <a href="watch1.html"><img src="images/film1-big.jpg" alt="Film Title by Producer-name" class="film-big"></a>
       </section>
 
       <h2>Drama</h2>
