--- a/producers.html
+++ b/producers.html
@@ -29,24 +29,28 @@
           </section>
 
           <section>
+            <img src="images/producer1.jpg">
             <h2>Name Surename</h2>
              <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
                 <a href="producer-profile.html">Profile</a>
           </section>
 
           <section>
+            <img src="images/producer2.jpg">
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
             <a href="producer-profile.html">Profile</a>
           </section>
 
           <section>
+            <img src="images/producer3.jpg">
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
             <a href="producer-profile.html">Profile</a>
           </section>
 
           <section>
+            <img src="images/producer4.jpg">
             <h2>Name Surename</h2>
             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
             <a href="producer-profile.html">Profile</a>
