--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </section>
 
       <section>
+        <img src="images/man-filming.jpg" alt="Producer filming">
         <h4>Are you a producer?</h2>
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
           <a href="create-account.html">Create an account</a>
