--- a/producers.html
+++ b/producers.html
@@ -19,6 +19,10 @@
           <li><a href="producers.html" class="active">Producers</a></li>
         </ul>
       </nav>
+      <nav class="right-menu">
+      <a href="create-account.html">Sign in</a>
+      <a href="search.html"><i class="fas fa-search"></i></a>
+      </nav>
     </header>
 
     <main>
