--- a/Create-account.html
+++ b/Create-account.html
@@ -11,8 +11,8 @@
 
   <body>
     <header>
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
-      
+      <a href="index.html"><img src="images/logo2.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
+      <i class="fas fa-home"></i>
     </header>
 
     <main>
