--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav class="right-menu">
-        <a href="create-account.html">Sign in</a>
+        <a href="login.html">Sign in</a>
         <a href="search.html"><i class="fas fa-search"></i></a>
       </nav>
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
