--- a/films.html
+++ b/films.html
@@ -12,7 +12,7 @@
   <body>
     <header>
         <nav class="right-menu">
-          <a href="create-account.html">Sign in</a>
+          <a href="login.html">Sign in</a>
           <i style="margin-right: 0,5em; color: #D6D0C8;" class="fas fa-search"></i>
         </nav>
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
