--- a/producer-profile.html
+++ b/producer-profile.html
@@ -12,8 +12,8 @@
   <body>
     <header>
       <nav class="right-menu">
-        <a href="create-account.html">Sign in</a>
-        <a href="search.html"><i class="fas fa-search"></i></a>
+        <a href="login.html">Sign in</a>
+        <i class="fas fa-search"></i>
       </nav>
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
       <nav>
