--- a/login.html
+++ b/login.html
@@ -31,7 +31,8 @@
 
           <input type="submit" value="Sign in">
             <p>Not a member?</p>
-            <p>Create an account</p><a href="create-account.html">here</a>
+            <p>Create an account</p>
+            <a href="create-account.html">here</a>
     </main>
 
     <footer>
