--- a/Create-account.html
+++ b/Create-account.html
@@ -26,7 +26,7 @@
              <p>Upload your work</p>
              <p>Profit per view</p>
              <p>Get your own profile page</p>
-              <a href="./create-account-pro/create-account-pro1.html">Make producer account</a>
+              <a href="create-account-pro/create-account-pro1.html">Make producer account</a>
           </section>
 
           <section>
