--- a/Create-account-pro/create-account-pro1.html
+++ b/Create-account-pro/create-account-pro1.html
@@ -29,6 +29,7 @@
          </fieldset>
              <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
              <i class="fas fa-arrow-circle-right fa-4x" style="color: #E6B33E;"></i>
+             <a href="../create-account-pro/create-account-pro2.html">next</a>
     </main>
 
     <footer>
