--- a/Create-account-pro/create-account-pro3.html
+++ b/Create-account-pro/create-account-pro3.html
@@ -16,26 +16,20 @@
     </header>
 
     <main>
-        <section>
-            <h1>Create an account</h1>
-               <p>Choose your type of account</p>
-          </section>
+        <fieldset>
+            <legend>Register your credit card</legend>
+            <p>*Optional - If your interested in watching other producers' films, you can add your creditcard infomation for easy payment.</p>
 
-          <section>
-            <h2>Producer</h2>
-             <p>Upload your work</p>
-             <p>Profit per view</p>
-             <p>Get your own profile page</p>
-              <a href="create-account-watcher/create-account-watcher1.html">Make producer account</a>
-          </section>
-
-          <section>
-            <h2>Watcher</h2>
-             <p>Enjoy independent films</p>
-             <p>Add credit card for easy payment</p>
-             <p>Get regular newsletters</p>
-              <a href="create-account-pro/create-account-pro1.html">Make watcher account</a>
-          </section>
+            <p>CARD NUMBER</p>
+            <input type="text" name="cardnumber">
+            <p>CARDHOLDER NAME</p>
+            <input type="text" name="cardholdername">
+            <p>EXPIRE DATE</p>
+            <input type="text" name="expiredate">
+            <p>CVV</p>
+            <input type="text" name="cvv">
+         </fieldset>
+         <a href="../create-account-pro/create-account-pro4.html">Next</a>
     </main>
 
     <footer>
