--- a/Create-account-watcher/create-account-watcher1.html
+++ b/Create-account-watcher/create-account-watcher1.html
@@ -16,26 +16,20 @@
     </header>
 
     <main>
-        <section>
-            <h1>Create an account</h1>
-               <p>Choose your type of account</p>
-          </section>
-
-          <section>
-            <h2>Producer</h2>
-             <p>Upload your work</p>
-             <p>Profit per view</p>
-             <p>Get your own profile page</p>
-              <a href="create-account-watcher/create-account-watcher1.html">Make producer account</a>
-          </section>
-
-          <section>
-            <h2>Watcher</h2>
-             <p>Enjoy independent films</p>
-             <p>Add credit card for easy payment</p>
-             <p>Get regular newsletters</p>
-              <a href="create-account-pro/create-account-pro1.html">Make watcher account</a>
-          </section>
+        <fieldset>
+            <legend>Personal information</legend>
+            <p>FULL NAME *</p>
+            <input type="text" name="fullname">
+            <p>E-MAIL *</p>
+            <input type="text" name="e-mail">
+            <p>BIRTH DATE *</p>
+            <input type="text" name="birthdate">
+            <p>CHOOSE A PASSWORD *</p>
+            <input type="text" name="password">
+         </fieldset>
+             <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
+             <i class="fas fa-arrow-circle-right fa-4x" style="color: #E6B33E;"></i>
+             <a href="../create-account-watcher/create-account-watcher2.html">next</a>
     </main>
 
     <footer>
