--- a/Create-account-watcher/create-account-watcher3.html
+++ b/Create-account-watcher/create-account-watcher3.html
@@ -17,24 +17,10 @@
 
     <main>
         <section>
-            <h1>Create an account</h1>
+            <i class="fas fa-check"></i>
+            <h1>You successfully became a membert</h1>
                <p>Choose your type of account</p>
-          </section>
-
-          <section>
-            <h2>Producer</h2>
-             <p>Upload your work</p>
-             <p>Profit per view</p>
-             <p>Get your own profile page</p>
-              <a href="create-account-watcher/create-account-watcher1.html">Make producer account</a>
-          </section>
-
-          <section>
-            <h2>Watcher</h2>
-             <p>Enjoy independent films</p>
-             <p>Add credit card for easy payment</p>
-             <p>Get regular newsletters</p>
-              <a href="create-account-pro/create-account-pro1.html">Make watcher account</a>
+               <a href="/account-watcher.html">Go to account</a>
           </section>
     </main>
 
