--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -16,26 +16,26 @@
     </header>
 
     <main>
-        <section>
-            <h1>Create an account</h1>
-               <p>Choose your type of account</p>
-          </section>
+        <fieldset>
+            <legend>Banking details</legend>
+            <p>Everytime someone watches your work, you will get paid</p>
 
-          <section>
-            <h2>Producer</h2>
-             <p>Upload your work</p>
-             <p>Profit per view</p>
-             <p>Get your own profile page</p>
-              <a href="create-account-watcher/create-account-watcher1.html">Make producer account</a>
-          </section>
-
-          <section>
-            <h2>Watcher</h2>
-             <p>Enjoy independent films</p>
-             <p>Add credit card for easy payment</p>
-             <p>Get regular newsletters</p>
-              <a href="create-account-pro/create-account-pro1.html">Make watcher account</a>
-          </section>
+            <p>FULL NAME *</p>
+            <input type="text" name="fullname">
+            <p>ADDRESS *</p>
+            <input type="text" name="address">
+            <p>CITY / ZIP CODE *</p>
+            <input type="text" name="city"><input type="text" name="zipcode">
+            <p>COUNTRY *</p>
+            <input type="text" name="country">
+            <p>IBAN *</p>
+            <input type="text" name="iban">
+            <p>SWIFT / BIC *</p>
+            <input type="text" name="swift-bic">
+            <p>BANK CODE (US)</p>
+            <input type="text" name="bankcode">
+         </fieldset>
+         <a href="../create-account-pro/create-account-pro3.html">Next</a>
     </main>
 
     <footer>
