--- a/Create-account-pro/create-account-pro4.html
+++ b/Create-account-pro/create-account-pro4.html
@@ -18,7 +18,7 @@
     <main>
         <section>
             <i class="fas fa-check"></i>
-            <h1>You successfully became a membert</h1>
+            <h1>You successfully became a member</h1>
                <p>Choose your type of account</p>
                <a href="/manage-account/manage-account-pro.html">Go to account</a>
           </section>
