--- a/search.html
+++ b/search.html
@@ -3,25 +3,24 @@
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>SquareEyes | Create an account</title>
+    <title>SquareEyes | Sign in</title>
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="pop-up.css" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <a href="index.html"><img src="images/logo2.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
-      <i class="fas fa-home"></i>
+        <i class="fas fa-chevron-left"></i>
     </header>
 
     <main>
         <section>
-            <i class="fas fa-check"></i>
-            <h1>You successfully became a member</h1>
-               <p>Choose your type of account</p>
-               <a href="../manage-account/manage-account-pro.html">Go to account</a>
+            <h1>Search</h1>
+             <input type="text" name="search">
+             <p>Type in film title, producer, tags or category </p>
           </section>
+
     </main>
 
     <footer>
