--- a/Create-account-pro/create-account-pro3.html
+++ b/Create-account-pro/create-account-pro3.html
@@ -20,16 +20,18 @@
             <legend>Register your credit card</legend>
             <p>*Optional - If your interested in watching other producers' films, you can add your creditcard infomation for easy payment.</p>
 
-            <p>CARD NUMBER</p>
+            <label for="cardnumber">CARDNUMBER</label>
             <input type="text" name="cardnumber">
-            <p>CARDHOLDER NAME</p>
+            <label for="cardholdername">CARDHOLDER NAME</label>
             <input type="text" name="cardholdername">
-            <p>EXPIRE DATE</p>
+            <label for="expiredate">EXPIRE DATE</label>
             <input type="text" name="expiredate">
-            <p>CVV</p>
+            <label for="cvv">CVV</label>
             <input type="text" name="cvv">
          </fieldset>
+         <input type="submit" value="next">
          <a href="../create-account-pro/create-account-pro4.html">Next</a>
+    </body>
     </main>
 
     <footer>
