--- a/Create-account-watcher/create-account-watcher2.html
+++ b/Create-account-watcher/create-account-watcher2.html
@@ -20,25 +20,27 @@
             <legend>Register your credit card</legend>
             <p>* This step is optional. By adding this information you do not have to type your credit card information everytime you are going to watch a film.</p>
 
-            <p>FULL NAME *</p>
+            <label for="fullname">FULL NAME</label>
             <input type="text" name="fullname">
-            <p>ADDRESS *</p>
+            <label for="adress">ADDRESS</label>
             <input type="text" name="address">
-            <p>CITY / ZIP CODE *</p>
+            <label for="city">CITY</label><label for="zipcode">ZIP CODE</label>
             <input type="text" name="city"><input type="text" name="zipcode">
-            <p>COUNTRY *</p>
+            <label for="country">COUNTRY</label>
             <input type="text" name="country">
 
-            <p>CARD NUMBER</p>
+            <label for="cardnumber">CARDNUMBER</label>
             <input type="text" name="cardnumber">
-            <p>CARDHOLDER NAME</p>
+            <label for="cardholdername">CARDHOLDER NAME</label>
             <input type="text" name="cardholdername">
-            <p>EXPIRE DATE</p>
+            <label for="expiredate">EXPIRE DATE</label>
             <input type="text" name="expiredate">
-            <p>CVV</p>
+            <label for="cvv">CVV</label>
             <input type="text" name="cvv">
          </fieldset>
+         <input type="submit" value="next">
          <a href="../create-account-watcher/create-account-watcher3.html">Next</a>
+    </body>
     </main>
 
     <footer>
