--- a/Create-account-pro/create-account-pro2.html
+++ b/Create-account-pro/create-account-pro2.html
@@ -22,21 +22,23 @@
             <p>Everytime someone watches your work, you will get paid</p>
 
             <label for="fullname">FULL NAME</label>
-            <input type="text" name="fullname" required>
+            <input type="text" name="fullname" class="form__input" required>
             <label for="adress">ADDRESS</label>
-            <input type="text" name="address" required>
+            <input type="text" name="address" class="form__input" required>
             <label for="city">CITY</label><label for="zipcode">ZIP CODE</label>
-            <input type="text" name="city" required><input type="text" name="zipcode" required>
+            <input type="text" name="city" required><input type="text" name="zipcode" class="form__input" required>
             <label for="country">COUNTRY</label>
-            <input type="text" name="country" required>
+            <input type="text" name="country" class="form__input" required>
             <label for="iban">IBAN</label>
-            <input type="text" name="iban" required>
+            <input type="text" name="iban" class="form__input" required>
             <label for="swift-bic">SWIFT / BIC</label>
-            <input type="text" name="swift-bic" required>
+            <input type="text" name="swift-bic" class="form__input" required>
             <label for="bankcode">BANKCODE (US)</label>
-            <input type="text" name="bankcode">
+            <input type="text" name="bankcode" class="form__input">
          </fieldset>
-         <input type="submit" value="next">
+            <input type="submit" value="next">
+        </form>
+
          <a href="../create-account-pro/create-account-pro3.html">Next</a>
     </main>
 
