--- a/Create-account-pro/create-account-pro3.html
+++ b/Create-account-pro/create-account-pro3.html
@@ -16,21 +16,22 @@
     </header>
 
     <main>
+        <form action="submit.php" method="GET">
         <fieldset>
             <legend>Register your credit card</legend>
             <p>*Optional - If your interested in watching other producers' films, you can add your creditcard infomation for easy payment.</p>
-
             <label for="cardnumber">CARDNUMBER</label>
-            <input type="text" name="cardnumber">
+            <input type="text" name="cardnumber" class="form__input">
             <label for="cardholdername">CARDHOLDER NAME</label>
-            <input type="text" name="cardholdername">
+            <input type="text" name="cardholdername" class="form__input">
             <label for="expiredate">EXPIRE DATE</label>
-            <input type="text" name="expiredate">
+            <input type="text" name="expiredate" class="form__input">
             <label for="cvv">CVV</label>
-            <input type="text" name="cvv">
+            <input type="text" name="cvv" class="form__input">
          </fieldset>
          <input type="submit" value="next">
          <a href="../create-account-pro/create-account-pro4.html">Next</a>
+         </form>
     </body>
     </main>
 
