--- a/Create-account-watcher/create-account-watcher1.html
+++ b/Create-account-watcher/create-account-watcher1.html
@@ -20,19 +20,19 @@
             <fieldset>
                 <legend>Personal information</legend>
                 <label for="fullname">FULL NAME</label>
-                <input type="text" name="fullname" required>
+                <input type="text" name="fullname" class="form__input" required>
                 <label for="e-mail">E-MAIL</label>
-                <input type="text" name="e-mail" required>
+                <input type="text" name="e-mail" class="form__input" required>
                 <label for="birthdate">BIRTH DATE</label>
-                <input type="text" name="birthdate" required>
+                <input type="text" name="birthdate" class="form__input" required>
                 <label for="password">CHOOSE YOUR PASSWORD</label>
-                <input type="text" name="password" required>
+                <input type="text" name="password" class="form__input" required>
                 <input type="checkbox" name="newsletter" value="newsletter" id="newsletter"><label for="newsletter">Send newsletters to my e-mail address</label>
                 <i class="fas fa-arrow-circle-right fa-4x" style="color: #E6B33E;"></i>
-                <a href="../create-account-pro/create-account-pro2.html">next</a>
             </fieldset>
             <input type="submit" value="next">
         </form>
+             <a href="../create-account-pro/create-account-pro2.html">next</a>
         </body>
     </main>
 
