--- a/Create-account.html
+++ b/Create-account.html
@@ -7,7 +7,7 @@
     <title>SquareEyes | Create an account</title>
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
   </head>
 
   <body>
