--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
     <title>SquareEyes | Sign in</title>
     <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="pop-up.css" rel="stylesheet">
+    <link href="styles/pop-up.css" rel="stylesheet">
   </head>
 
   <body>
