--- a/hamburger.html
+++ b/hamburger.html
@@ -1,21 +1,21 @@
 <html>
-  <head>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/hamburger.css" />
-  </head>
-  <body>
-    <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
-    <input type="checkbox" id="hamburger-menu" />
-    <nav>
-      <ul>
+    <head>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="styles/hamburger.css">
+    </head>
+    <body>
+        <header>
+            <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
+            <label class="hamburger-label" for="hamburger-menu"><i class="fas fa-bars"></i></label>
+            <input type="checkbox" id="hamburger-menu">
+            <nav>
+                <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="films.html">Films</a></li>
         <li><a href="producers.html">Producers</a></li>
         <li><a href="search.html">Search</a></li>
-      </ul>
-    </nav>
-  </body>
+    </ul>
+</nav>
+</header>
+</body>
 </html>
