--- a/hamburger.html
+++ b/hamburger.html
@@ -16,6 +16,31 @@
         <li><a href="search.html">Search</a></li>
     </ul>
 </nav>
-</header>
-</body>
+<main>
+    <section> 
+      <h1>Stream high quality independent films</h1> 
+    </section>
+     
+     <section>
+       <h2>Film-lover?</h2>
+        <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
+          <a href="films.html">Explore our films</a>
+     </section>
+
+     <section>
+       <h3>Pay-per-watch</h2>
+       <p>No monthly charges. Only 2$ per film.</p>
+     </section>
+
+     <section>
+       <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
+       <h4>Are you a producer?</h2>
+        <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
+         <a href="create-account.html">Create an account</a>
+     </section>
+   </main>
+  
+   <footer>
+
+   </footer>
 </html>
