--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     </header>
    
     <main>
-     <section> 
-       <h1>Stream high quality independent films</h1> 
-     </section>
+    <section class="index-section1">
+      <div class="index-picture2"><img src="images/watchingfilm.jpg" alt=""></div>
+      <h1>Stream high quality independent films</h1> 
+    </section>
       
       <section>
         <h2>Film-lover?</h2>
