--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    
     <main>
     <section class="index-section1">
-      <div class="index-picture2"><img src="images/watchingfilm.jpg" alt=""></div>
+      <div class="index-picture-div"><img src="images/watchingfilm.jpg" alt="" class="index-picture2"></div>
       <h1>Stream high quality independent films</h1> 
     </section>
       
