--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <body>
     <header>
+      <div class="content-wrap">
       <nav class="right-menu">
         <a href="login.html">Sign in</a>
         <a href="search.html"><i class="fas fa-search"></i></a>
@@ -24,6 +25,7 @@
           <li><a href="producers.html">Producers</a></li>
         </ul>
       </nav>
+    </div>
     </header>
    
     <main>
