--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <header>
-      <div class="content-wrap">
+    <div class="content-wrap">
       <nav class="right-menu">
         <a href="login.html">Sign in</a>
         <a href="search.html"><i class="fas fa-search"></i></a>
@@ -29,31 +29,42 @@
     </header>
    
     <main>
-    <section class="index-section1">
-      <div class="index-picture-div"><img src="images/watchingfilm.jpg" alt="" class="index-picture2"></div>
-      <h1>Stream high quality independent films</h1> 
-    </section>
-      
+      <section class="index-section1">
+        <div class="content-wrap">
+          <div class="index-picture-div"><img src="images/watchingfilm.jpg" alt="" class="index-picture2"></div>
+          <h1>Stream high quality independent films</h1> 
+        </div>
+      </section>
+
+
       <section>
+        <div class="content-wrap">
         <h2>Film-lover?</h2>
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
            <a href="films.html">Explore our films</a>
+        </div>
       </section>
 
       <section>
-        <h3>Pay-per-watch</h2>
+        <div class="content-wrap">
+        <h3>Pay-per-watch</h3>
         <p>No monthly charges. Only 2$ per film.</p>
+        </div>
       </section>
 
       <section>
+        <div class="content-wrap">
         <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
-        <h4>Are you a producer?</h2>
+        <h4>Are you a producer?</h4>
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
           <a href="create-account.html">Create an account</a>
+        </div>
       </section>
     </main>
    
     <footer>
-
+      <div class="content-wrap">
+        
+      </div>
     </footer>
 </html>
