--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <body>
     <header>
     <div class="content-wrap">
-      <nav class="right-menu">
+      <div class="right-nav">
+      <ul>
         <a href="login.html">Sign in</a>
         <a href="search.html"><i class="fas fa-search"></i></a>
-      </nav>
+      </ul>
+      </div>
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
       <nav>
         <ul>
