--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
 
 
-      <section>
+      <section class="index-section2">
         <div class="content-wrap">
         <h2>Film-lover?</h2>
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
@@ -47,14 +47,14 @@
         </div>
       </section>
 
-      <section>
+      <section class="index-section3">
         <div class="content-wrap">
         <h3>Pay-per-watch</h3>
         <p>No monthly charges. Only 2$ per film.</p>
         </div>
       </section>
 
-      <section>
+      <section class="index-section3">
         <div class="content-wrap">
         <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
         <h4>Are you a producer?</h4>
