--- a/producers.html
+++ b/producers.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>SquareEyes | Producers</title>
-    <meta name="description" content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles/styles.css" rel="stylesheet">
+    <meta
+      name="description"
+      content="This is a streaming site for film-lovers to watch independent films and for film producerst to show their work."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="styles/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <header>
-     <nav class="right-menu">
-      <a href="login.html">Sign in</a>
-      <a href="search.html"><i class="fas fa-search"></i></a>
-    </nav>
-      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
+      <nav class="right-menu">
+        <a href="login.html">Sign in</a>
+        <a href="search.html"><i class="fas fa-search"></i></a>
+      </nav>
+      <a href="index.html"
+        ><img
+          src="images/logo.png"
+          alt="SquarEyes - connecting film-lovers"
+          class="logo"
+      /></a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -24,46 +41,89 @@
           <li><a href="producers.html" class="active">Producers</a></li>
         </ul>
       </nav>
-
     </header>
 
     <main>
-        <section>
-            <h1>Producers</h1>
-               <p>Explore independent producers and watch their high quality films</p>
-                <p>Are you are producer yourself?</p><a href="create-account.html">Join us now!</a>
-          </section>
+      <section>
+        <div class="content-wrap">
+          <h1>Producers</h1>
+          <p>
+            Explore independent producers and watch their high quality films
+          </p>
+          <p>Are you are producer yourself?</p>
+          <a href="create-account.html">Join us now!</a>
+        </div>
+      </section>
 
-          <section>
-            <img src="images/producer1.jpg" class="producer">
+      <section>
+        <div class="content-wrap">
+          <img src="images/producer1.jpg" class="producer" />
+          <div class="producer-col">
             <h2>Name Surename</h2>
-             <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
-                <a href="producer-profile.html">Profile</a>
-          </section>
-
-          <section>
-            <img src="images/producer2.jpg" class="producer">
-            <h2>Name Surename</h2>
-            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <p>
+              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+              perspiciatis unde omnis iste natus error sit voluptartem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi ropeior architecto
+              beatae vitae dicta sunt.
+            </p>
             <a href="producer-profile.html">Profile</a>
-          </section>
+          </div>
+        </div>
+      </section>
 
-          <section>
-            <img src="images/producer3.jpg" class="producer">
+      <section>
+        <div class="content-wrap">
+          <img src="images/producer2.jpg" class="producer" />
+          <div class="producer-col">
             <h2>Name Surename</h2>
-            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <p>
+              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+              perspiciatis unde omnis iste natus error sit voluptartem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi ropeior architecto
+              beatae vitae dicta sunt.
+            </p>
             <a href="producer-profile.html">Profile</a>
-          </section>
+          </div>
+        </div>
+      </section>
 
-          <section>
-            <img src="images/producer4.jpg" class="producer">
+      <section>
+        <div class="content-wrap">
+          <img src="images/producer3.jpg" class="producer" />
+          <div class="producer-col">
             <h2>Name Surename</h2>
-            <p>Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptartem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi ropeior architecto beatae vitae dicta sunt.</p>
+            <p>
+              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+              perspiciatis unde omnis iste natus error sit voluptartem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi ropeior architecto
+              beatae vitae dicta sunt.
+            </p>
             <a href="producer-profile.html">Profile</a>
-          </section>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="content-wrap">
+          <img src="images/producer4.jpg" class="producer" />
+          <div class producer-col>
+            <h2>Name Surename</h2>
+            <p>
+              Culpa qui officia deserunt mollit anim id est laborum. Sed ut
+              perspiciatis unde omnis iste natus error sit voluptartem
+              accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
+              quae ab illo inventore veritatis et quasi ropeior architecto
+              beatae vitae dicta sunt.
+            </p>
+            <a href="producer-profile.html">Profile</a>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer>
-
-    </footer>
+    <footer></footer>
+  </body>
 </html>
