--- a/producers.html
+++ b/producers.html
@@ -28,12 +28,7 @@
         <a href="login.html">Sign in</a>
         <a href="search.html"><i class="fas fa-search"></i></a>
       </nav>
-      <a href="index.html"
-        ><img
-          src="images/logo.png"
-          alt="SquarEyes - connecting film-lovers"
-          class="logo"
-      /></a>
+      <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"/></a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -74,7 +69,9 @@
 
       <section>
         <div class="content-wrap">
-          <img src="images/producer2.jpg" class="producer" />
+          <img src="images/producer2.jpg" class="producer"/>
+      </section>
+      <section>
           <div class="producer-col">
             <h2>Name Surename</h2>
             <p>
@@ -91,7 +88,7 @@
 
       <section>
         <div class="content-wrap">
-          <img src="images/producer3.jpg" class="producer" />
+          <img src="images/producer3.jpg" class="producer"/>
           <div class="producer-col">
             <h2>Name Surename</h2>
             <p>
@@ -108,7 +105,7 @@
 
       <section>
         <div class="content-wrap">
-          <img src="images/producer4.jpg" class="producer" />
+          <img src="images/producer4.jpg" class="producer"/>
           <div class producer-col>
             <h2>Name Surename</h2>
             <p>
