--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <body>
     <header>
+    <div class="sticky-content">
      <div class="content-wrap">
        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
          <div class="right-nav">
@@ -28,6 +29,7 @@
        </ul>
      </nav>
      </div>
+    </div>
    </header>
    
    <main>
