--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
      </div>
     </div>
    </header>
-   
-   <nav>
+  
+   <main> 
+   <nav class="navbar">
        <ul>
          <li><a href="index.html" class="active">Home</a></li>
          <li><a href="films.html">Films</a></li>
@@ -33,7 +34,6 @@
        </ul>
     </nav>
  
-    <main>
       <section class="index-section1">
          <div class="index-picture-div"><img src="images/watchingfilm.jpg" alt="" class="index-picture2"></div>
         <div class="content-wrap">
