--- a/films.html
+++ b/films.html
@@ -12,11 +12,13 @@
  
   <body>
     <header>
-        <nav class="right-menu">
-          <a href="login.html">Sign in</a>
-          <i style="margin-right: 0,5em; color: #D6D0C8;" class="fas fa-search"></i>
-        </nav>
       <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo"></a>
+      <div class="right-nav">
+        <ul>
+         <a href="login.html">Sign in</a>
+         <a href="search.html"><i class="fas fa-search"></i></a>
+       </ul>
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
