--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   
   <body>
     <header>
-    <div class="sticky-content">
      <div class="content-wrap">
        <a href="index.html"><img src="images/logo.png" alt="SquarEyes - connecting film-lovers" class="logo">
          <nav class="right-nav">
@@ -22,12 +21,11 @@
          </ul>
          </nav>
      </div>
-    </div>
    </header>
   
    <main> 
    <nav class="navbar">
-       <ul>
+       <ul style="margin-left: 59px;">
          <li><a href="index.html" class="active">Home</a></li>
          <li><a href="films.html">Films</a></li>
          <li><a href="producers.html">Producers</a></li>
