--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="content-wrap">
         <h3>Pay-per-watch</h3>
         <p>No monthly charges. Only 2$ per film.</p>
+        <i class="fas fa-film"></i>
         </div>
       </section>
 
