--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
 
       <section class="index-section3">
         <div class="content-wrap">
-        <h3>Pay-per-watch</h3>
-        <p>No monthly charges. Only 2$ per film.</p>
-        <i class="fas fa-film"></i>
+         <h3>Pay-per-watch</h3>
+          <p>No monthly charges. Only 2$ per film.</p> 
+            <span style="font-size: 7px;">
+              <i class="fas fa-film"></i>
+           </span>
         </div>
       </section>
 
