--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
         <div class="content-wrap">
         <h2>Film-lover?</h2>
          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
-           <a href="films.html">Explore our films</a>
+          <button class="button1">
+            <a href="films.html">Explore our films</a>
+          </button>
         </div>
       </section>
 
@@ -52,7 +54,7 @@
         <div class="content-wrap">
          <h3>Pay-per-watch</h3>
           <p>No monthly charges. Only 2$ per film.</p> 
-            <span style="font-size: 7px;">
+            <span style="font-size: 5em;float: right;margin-right: 10%;">
               <i class="fas fa-film"></i>
            </span>
         </div>
@@ -63,7 +65,9 @@
         <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
         <h4>Are you a producer?</h4>
          <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
-          <a href="create-account.html">Create an account</a>
+         <button class="button2">
+         <a href="create-account.html">Create an account</a>
+        </button> 
         </div>
       </section>
     </main>
